package maze.maze.element;

public class StartModel extends PathModel {
}
